@@ -1,3 +1,15 @@
+2016-08-22  Dewei Zhu  <dewei_zhu@apple.com>
+
+        Stop python icon bouncing in the dock while running browser benchmarks.
+        https://bugs.webkit.org/show_bug.cgi?id=161066
+
+        Reviewed by Ryosuke Niwa.
+
+        Bouncing python icon may impact browser benchmark results.
+        * Scripts/webkitpy/benchmark_runner/browser_driver/osx_browser_driver.py:
+        (OSXBrowserDriver.prepare_env):
+        (OSXBrowserDriver.restore_env):
+
 2016-08-22  Simon Fraser  <simon.fraser@apple.com>
 
         <select> menu on iPad causes shifting of hit-testing areas
